// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertENotationNumbers 1`] = `
<input
  className="property-input form-control"
  data-info-range={undefined}
  data-info-step={undefined}
  data-info-type="Double"
  id="doublePropertyInput"
  onBlur={[Function]}
  onChange={[Function]}
  onInput={[Function]}
  placeholder={undefined}
  required={true}
  size={undefined}
  type="text"
  value="110"
/>
`;

exports[`convertENotationNumbers 2`] = `
<input
  className="property-input form-control"
  data-info-range={undefined}
  data-info-step={undefined}
  data-info-type="Double"
  id="doublePropertyInput"
  onBlur={[Function]}
  onChange={[Function]}
  onInput={[Function]}
  placeholder={undefined}
  required={true}
  size={undefined}
  type="text"
  value="text"
/>
`;
